# cross_indicator_consistency_arbitrage

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-analysis.txt  requirements-test.txt  requirements.txt  strats.txt
.github/workflows/: deploy-prod.yml  tests.yml
analysis/: README.md  arbitrage_scan.py  backtest.py  check_readiness.py  collect_fred.py  discover_rules.py  explore_dataset.py  fed_path_check.py  inspect_dataset.py  mappings.yaml  oos_test.py  rules.py  run_all.py  run_consistency.py  signals.py  validate_consistency.py
analysis/stats/: dataset_stats.json  per_market_stats.csv
deploy/: deploy_from_github.sh
deploy/systemd/: README.md
docs/: COLLECTOR.md  IMPROVEMENTS.md
samples/: btc_history_response.json  btc_market_response.json  btc_open_interest_batch_response.json  btc_projected_probabilities_response.json  contract_details_response.json  history_response.json  market_response.json  open_interest_response.json  projected_probabilities_response.json  rcnet_category_tree_response.json  rcnet_contract_details_response.json  rcnet_history_response.json  rcnet_market_response.json  rcnet_projected_probabilities_response.json  snapshot_response.json
sql/: 001_init.sql  002_indexes.sql  003_categories_and_state.sql  004_history_semantics.sql  005_run_metadata.sql  006_history_collection_state.sql
src/forecast_collector/: __init__.py  cli.py  config.py  endpoints.py  http_client.py  models.py  parsers.py  repository.py  scheduler.py  service_discovery.py  service_export.py  service_health.py  service_helpers.py  service_history.py  service_interest.py  service_market.py  service_probabilities.py
tests/: test_analysis_inspect_dataset.py  test_analysis_scripts.py  test_cli_smoke.py  test_config.py  test_parsers.py  test_repository.py  test_scheduler.py  test_services.py
