[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecasttrader-collector"
version = "0.1.0"
description = "Server-side collector for IBKR ForecastTrader public endpoints"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1.0",
  "tenacity>=9.0,<10.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "typer>=0.12,<1.0",
  "orjson>=3.10,<4.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9.0",
  "pytest-httpx>=0.30,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

