[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecasttrader-collector"
version = "0.1.0"
description = "Server-side collector for IBKR ForecastTrader public endpoints"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1.0",
  "tenacity>=9.0,<10.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "typer>=0.12,<1.0",
  "orjson>=3.10,<4.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9.0",
  "pytest-httpx>=0.30,<1.0",
]
analysis = [
  "pandas>=2.2,<3.0",
  "scipy>=1.11,<2.0",
  "numpy>=1.26,<3.0",
  "pyyaml>=6.0,<7.0",
  "matplotlib>=3.8,<4.0",
  "requests>=2.31,<3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["deploy"]

[tool.ruff.lint]
# Minimal, high-signal set (E12): real errors, unused code, import hygiene.
select = ["E4", "E7", "E9", "F", "B", "UP"]
ignore = [
  "E731",  # lambda assignment: used deliberately in analysis one-liners
  "B023",  # loop-variable closures are always bound immediately here
]

[tool.ruff.lint.per-file-ignores]
# analysis scripts import after sys.path shim, by design (E4 module level)
"analysis/*.py" = ["E402"]
# tests import after pytest.importorskip, by design
"tests/*.py" = ["E402"]
# typer's Option-in-default is the documented CLI idiom
"src/forecast_collector/cli.py" = ["B008"]

